--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,108 @@
+---
+import '@/styles/global.css'
+import Header from "@/components/Navbar.astro";
+import Footer from "@/components/Footer.astro"
+import Aside from '@/components/Aside.astro';
+const { title } = Astro.props
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
-	<body>
+	<body class="dark:text-white dark:bg-black">
+		<div class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full 
+			bg-[radial-gradient(ellipse_95%_95%_at_50%_20%,rgba(100,243,75,0.2),rgba(255,255,255,0.9))]
+			dark:bg-gray-950
+			dark:bg-[radial-gradient(ellipse_90%_90%_at_50%_-5%,rgba(100,243,70,0.3),rgba(0,0,0,0.9))]"
+		>
+	
+		</div>
+		<Aside />
+		<Header />
 		<slot />
+	
+		<style is:global>
+			@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Pixelify+Sans:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+			:root {
+				color-scheme: light dark;
+			}
+
+			body {
+				font-family: 'Poppins', sans-serif;
+				display: flex;
+				flex-direction: column;
+				min-height: 100vh;
+				overscroll-behavior: none;
+			}
+
+			html {
+				scroll-behavior: smooth;
+			}
+			
+			main {
+				margin: 0 auto;
+			}
+
+			@media (prefers-reduced-motion: reduce) {
+				html {
+					scroll-behavior: auto;
+				}
+			}
+
+
+			#header-nav {
+				animation: blur linear both 0.5s;
+				animation-timeline: scroll();
+				animation-range: 0 500px;
+			}
+
+			@keyframes blur {
+				to {
+					backdrop-filter: blur(20px);
+					border-width: 1px;
+					border-color: rgba(0, 0, 0);
+					padding: 0.25rem 0.75rem;
+					display: flex;
+					flex-direction: row;
+					align-items: center;
+					background-color: rgb(229, 229, 229);
+					border-radius: 9999px;
+				}
+			}
+
+			@media (prefers-color-scheme: dark) {
+				@keyframes blur {
+					from {
+						border: 0px;
+					}
+					to {
+						box-shadow:
+						0px 5px 50px -5px rgba(0, 0, 0, 0.1),
+						0px 0px 0 1px rgba(0, 0, 0, 0.3);
+						background: rgba(0, 0, 0, 0.3);
+						backdrop-filter: blur(20px);
+						border-width: 1px;
+						border-color: rgba(0, 0, 0);
+						padding-left: 0.75rem;
+						padding-right: 0.75rem;
+						padding-top: 0.25rem;
+						padding-bottom: 0.25rem;
+						display: flex;
+						flex-direction: row;
+						align-items: center;
+						background-color: rgba(0, 0, 0, 0.3);
+						border-radius: 9999px;
+					}
+				}
+			}
+
+		</style>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
