Se Arreglo Responsive proyectos y se añadio Tech a Backend

--- a/src/components/Certifies.astro
+++ b/src/components/Certifies.astro
@@ -6,7 +6,7 @@ const certifies = certifiesRaw.map((item) => item.data)
 ---
 
 <div class="">
-    <span class='[&>strong]:text-blue-500 [&>span]:text-orange-500 
+    <span class='text-black dark:text-white [&>strong]:text-blue-500 [&>span]:text-orange-500 
     dark:[&>strong]:text-[#2cc9ff] dark:[&>span]:text-[#f5a563]
     [&>span]:font-bold'>
         A lo largo de mi formación profesional, he completado cursos que fortalecieron mis <strong>habilidades técnicas</strong> y <strong>prácticas</strong>. Estas certificaciones respaldan mi conocimiento en tecnologías como JavaScript, React, Node.js, <span>bases de datos</span> y <span>metodologías ágiles</span>, permitiéndome abordar proyectos de forma integral y con una visión moderna del desarrollo web.
@@ -32,8 +32,8 @@ const certifies = certifiesRaw.map((item) => item.data)
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
                         <div class="">
-                            <p class="text-xl font-bold pb-2 dark:text-green-400">{certifie.title}</p>
-                            <span class="text-xs text-gray-500 dark:text-white">{certifie.description}</span>
+                            <p class="text-xl font-bold pb-2 text-green-400">{certifie.title}</p>
+                            <span class="text-xs text-black dark:text-white">{certifie.description}</span>
                         </div>
                     </div>
                     <div class="flip-card-back">
