--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,7 +7,7 @@ const skills = skillsRaw.map((item) => item.data)
 
 <div class="relative gap-20 md:flex-row md:justify-center md:flex-wrap md:items-center md:gap-20">
     <header class="tech-header-container flex flex-col flex-warp justify-center pb-6">
-            <span class='text-l text-pretty font-normal dark:[&>strong]:text-[#2cc9ff] [&>strong]:text-blue-500 [&>span]:text-orange-500 [&>span]:font-bold dark:[&>strong]:text-p dark:[&>span]:text-[#f5a563]'>
+            <span class='text-l text-black dark:text-white text-pretty font-normal dark:[&>strong]:text-[#2cc9ff] [&>strong]:text-blue-500 [&>span]:text-orange-500 [&>span]:font-bold dark:[&>strong]:text-p dark:[&>span]:text-[#f5a563]'>
                 Trabajo con herramientas como <strong>React</strong>, <strong>Firebase</strong>, <strong>Tailwind </strong> y <strong>JavaScript</strong> para crear experiencias web dinámicas y eficientes.
                 También tengo habilidades en <span>diseño responsivo</span>, manejo de <span>versionado con Git</span> y enfoque en buenas prácticas de desarrollo.
             </span>
