--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="dark:text-white dark:bg-black">
+	<body class="bg-white dark:text-white dark:bg-black">
 		<div class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full 
 			bg-[radial-gradient(ellipse_95%_95%_at_50%_20%,rgba(100,243,75,0.2),rgba(255,255,255,0.9))]
 			dark:bg-gray-950
@@ -38,7 +38,7 @@ const { title } = Astro.props
 				font-family: 'Poppins', sans-serif;
 				display: flex;
 				flex-direction: column;
-				min-height: 100vh;
+				min-height: 100dvh;
 				overscroll-behavior: none;
 			}
 
