--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,8 +3,8 @@
 ---
 
 <div class="flex flex-col md:flex-row justify-center items-center gap-6">
-    <div class="pr-4 ">
-        <p class="[&>span]:text-blue-500 [&>span]:font-light [&>span]:font-mono">
+    <div class="pr-4">
+        <p class="text-black dark:text-white [&>span]:text-blue-500 [&>span]:font-light [&>span]:font-mono">
         Soy <span>Blas Vernazza</span>, Full Stack Developer con <span>2 años de experiencia</span> en desarrollo web. Me especializo en <span>JavaScript, React y Node.js</span>, creando aplicaciones eficientes, escalables y centradas en el usuario.
 
         Trabajo con foco en <span>buenas prácticas, código limpio y colaboración en equipo</span>. Me motiva seguir creciendo en proyectos que mezclen <span>tecnología, innovación y aprendizaje continuo.</span>
