--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -4,6 +4,7 @@ import Github3 from './icons/github3.astro'
 import Demo from './icons/Demo.astro'
 
 const proyectsRaw = await getCollection('proyects')
+proyectsRaw.sort((a, b) => a.data.order - b.data.order)
 const proyects = proyectsRaw.map((item) => item.data)
 ---
 <div class="flex flex-col gap-20 mt-2 md:flex-row md:justify-center md:flex-wrap md:items-center md:gap-20">
