--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title } = Astro.props
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/public/TechIcons/icons-Web.png" />
+		<link rel="icon" type="image/svg+xml" href="/TechIcons/icons-Web.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
