--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -38,6 +38,9 @@ const skills = skillsRaw.map((item) => item.data)
 
 
 <style>
+    .dark img[src$="gsap-black.svg"] {
+        filter: invert(1);
+    }
     .grid-tech{
 		display: grid;
 		width: 100%;
