--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -6,19 +6,23 @@ import Linkedin from "./icons/linkedin.astro";
 import Fiverr from './icons/fiverr.astro';
 ---
 
-<div class="inline-block fixed top-1/2 left-5 z-10">
-    <div class="flex flex-col justify-center items-center p-3 shadow-[0_7px_13px_-1px_rgba(0,0,0,0.2),_0_2px_4px_-2px_rgba(0,0,0,0.2)] border-[2px] border-gray-400 backdrop-blur-[4px] bg-white/30 dark:bg-gray-800 dark:border-gray-400 rounded-full mb-2">
-        <ThemeToggle client:load/>
-    </div>
-    <div class="flex flex-col justify-center items-center gap-3 p-2 shadow-[0_7px_13px_-1px_rgba(0,0,0,0.2),_0_2px_4px_-2px_rgba(0,0,0,0.2)] border-[2px] border-gray-400 backdrop-blur-[4px] bg-white/30 dark:bg-gray-800 dark:border-gray-400 rounded-full">
-        <AsidePill href="https://github.com/">
-            <Github3 class="size-6" />
-        </AsidePill>
-        <AsidePill href="https://www.linkedin.com/in/blas-vernazza-888588355/">
-            <Linkedin class="size-6" />
-        </AsidePill>
-        <AsidePill href="https://www.fiverr.com/blas_vernazza?public_mode=true">
-            <Fiverr class="size-6" />
-        </AsidePill>
-    </div>
+<div class="fixed bottom-0 left-1/2 -translate-x-1/2 -translate-y-5 flex flex-row items-center justify-center gap-2 z-50
+            md:fixed md:top-1/4 md:left-5 md:translate-x-0 md:flex-col">
+  <!-- Botón de tema -->
+  <div class="flex justify-center items-center p-3 shadow-[0_7px_13px_-1px_rgba(0,0,0,0.2),_0_2px_4px_-2px_rgba(0,0,0,0.2)] border-[2px] border-gray-400 backdrop-blur-[4px] bg-white/30 dark:bg-gray-800 dark:border-gray-400 rounded-full md:mb-2">
+    <ThemeToggle client:load />
+  </div>
+
+  <!-- Botones sociales -->
+  <div class="flex flex-row md:flex-col justify-center items-center gap-3 p-2 shadow-[0_7px_13px_-1px_rgba(0,0,0,0.2),_0_2px_4px_-2px_rgba(0,0,0,0.2)] border-[2px] border-gray-400 backdrop-blur-[4px] bg-white/30 dark:bg-gray-800 dark:border-gray-400 rounded-full">
+    <AsidePill href="https://github.com/">
+      <Github3 class="size-6" />
+    </AsidePill>
+    <AsidePill href="https://www.linkedin.com/in/blas-vernazza-888588355/">
+      <Linkedin class="size-6" />
+    </AsidePill>
+    <AsidePill href="https://www.fiverr.com/blas_vernazza?public_mode=true">
+      <Fiverr class="size-6" />
+    </AsidePill>
+  </div>
 </div>
