--- a/src/components/Proyects.astro
+++ b/src/components/Proyects.astro
@@ -9,7 +9,7 @@ const proyects = proyectsRaw.map((item) => item.data)
 ---
 <div class="flex flex-col gap-20 mt-2 md:flex-row md:justify-center md:flex-wrap md:items-center md:gap-20">
     {proyects.map((proyecto) => (
-        <div class="w-full max-w-[400px] h-[500px] md:w-[420px] md:h-[500px] 
+        <div class="w-full max-w-[400px] h-max md:w-[420px] md:h-[500px] 
             flex flex-col justify-between
             bg-[rgba(171,207,177,0.15)] 
             dark:bg-[rgba(176,253,189,0.08)] 
