Se corrigen temas de href

--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -15,7 +15,7 @@ import Fiverr from './icons/fiverr.astro';
 
   <!-- Botones sociales -->
   <div class="flex flex-row md:flex-col justify-center items-center gap-3 p-2 shadow-[0_7px_13px_-1px_rgba(0,0,0,0.2),_0_2px_4px_-2px_rgba(0,0,0,0.2)] border-[2px] border-gray-400 backdrop-blur-[4px] bg-white/30 dark:bg-gray-800 dark:border-gray-400 rounded-full">
-    <AsidePill href="https://github.com/">
+    <AsidePill href="https://github.com/BlasVernazza06">
       <Github3 class="size-6" />
     </AsidePill>
     <AsidePill href="https://www.linkedin.com/in/blas-vernazza-888588355/">
