--- a/src/components/Start.astro
+++ b/src/components/Start.astro
@@ -22,10 +22,10 @@ import SocialPill from "./SocialPill.astro";
         Full Stack React & Mobile Developer
     </span>
     <nav class="flex flex-wrap justify-center mt-4 gap-3">
-        <SocialPill href="/public/files/Curriculum Vitae.pdf">
+        <SocialPill href="/files/Curriculum Vitae.pdf">
             Descargar CV
         </SocialPill>
-        <SocialPill href="https://github.com/">
+        <SocialPill href="https://github.com/BlasVernazza06">
             <Github3 class="size-5"/>
             Github
         </SocialPill>
