--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Proyects from '@/components/Proyects.astro'
 				<TitleSection>
 					Proyects
 				</TitleSection>
-				<Proyects/>
+				<Proyects client/>
 			</SectionContainer>
 			<SectionContainer id="Skills">
 				<TitleSection>
